@@ -1,3 +1,15 @@
+2007-10-26  P. Henrique Silva  <henrique@astro.ufsc.br>
+
+	* src/chimera/interfaces/camera.py:
+	* src/chimera/interfaces/filterwheel.py:
+	* src/chimera/interfaces/telescope.py:
+	* src/chimera/interfaces/dome.py:
+	* src/chimera/interfaces/focuser.py:
+
+	New data options added. Sites should use this to provide
+	information to controller's scripts.
+
+
 2007-10-25  P. Henrique Silva  <henrique@astro.ufsc.br>
 
 	* src/chimera/interfaces/camera.py: New default filename
